--- a/located-base.cabal
+++ b/located-base.cabal
@@ -1,18 +1,33 @@
 name:                located-base
 version:             0.1.0.0
-synopsis:            This library provides variants of standard partial functions
+synopsis:            Location-aware variants of partial functions
+description:         This library provides variants of standard partial functions
                      that include their call-site in the error message when they crash.
--- description:
+                     .
+                     For example:
+                     .
+                     @
+                       ghci> 'Data.List.Located.head' []
+                       *** Exception: Prelude.head: empty list
+                       Callstack:
+                       \ \ error, called at src\/Data\/List\/Located.hs:19:14 in locat_KhGZ7Rz1bn9DKFeFxhawNB:Data.List.Located
+                       \ \ head, called at \<interactive\>:6:1 in interactive:Ghci1
+                     @
+
 homepage:            http://github.com/gridaphobe/located-base
+bug-reports:         http://github.com/gridaphobe/located-base/issues
 license:             BSD3
 license-file:        LICENSE
 author:              Eric Seidel
 maintainer:          eric@seidel.io
--- copyright:
--- category:
+copyright:           Eric Seidel 2015
+category:            Development
 build-type:          Simple
--- extra-source-files:
 cabal-version:       >=1.10
+
+source-repository head
+    type:     git
+    location: https://github.com/gridaphobe/located-base.git
 
 library
   exposed-modules:     Data.Either.Located
@@ -21,6 +36,6 @@ library
                  ,     GHC.Err.Located
                  ,     Text.Read.Located
 
-  build-depends:       base >= 4.8.1.0
+  build-depends:       base >= 4.8.1.0 && < 4.9
   hs-source-dirs:      src
   default-language:    Haskell2010
