--- a/located-base.cabal
+++ b/located-base.cabal
@@ -39,3 +39,12 @@ library
   build-depends:       base >= 4.8.1.0 && < 4.9
   hs-source-dirs:      src
   default-language:    Haskell2010
+
+benchmark bench
+  type:                exitcode-stdio-1.0
+  main-is:             Bench.hs
+  hs-source-dirs:      bench
+  default-language:    Haskell2010
+  build-depends:       base
+                     , criterion
+                     , located-base
