--- a/located-base.cabal
+++ b/located-base.cabal
@@ -24,6 +24,7 @@ copyright:           Eric Seidel 2015
 category:            Development
 build-type:          Simple
 cabal-version:       >=1.10
+tested-with:         GHC == 7.10.3, GHC == 8.0.2
 
 source-repository head
     type:     git
